# cmw-infinity

./: .env-example  .gitignore  AGENTS.md  README.md  convert_qwen_rerankers.py  manual_start_reranker.py  pyproject.toml  serve_converted_reranker.py  session-ses_3ea1_MOSEC.md  test_bge_reranker.py  test_reranker_configs.py
.opencode/plans/: mosec_reranker_implementation.md  qwen3_reranker_implementation.md  qwen3guard_implementation.md
cmw_infinity/: __init__.py  cli.py  server_config.py  server_manager.py
config/: models.yaml
tests/: __init__.py  test_cpu_integration.py  test_server_config.py
