[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmw-infinity"
version = "0.1.0"
description = "Infinity server management for CMW projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CMW Team"},
]
keywords = ["infinity", "embeddings", "reranker", "server", "cmw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click",
    "pydantic",
    "requests",
    "infinity",
    "infinity-emb[all]",
    "optimum",
    "accelerate",
    "torch",
    "transformers",
    "huggingface-hub",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
cmw-infinity = "cmw_infinity.cli:cli"

[project.urls]
Homepage = "https://github.com/arterm-sedov/cmw-infinity"
Repository = "https://github.com/arterm-sedov/cmw-infinity"

[tool.hatch.build.targets.wheel]
packages = ["cmw_infinity"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
